--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ header{
     color:chocolate;
 }
 
-section{
+.chamada{
     background: white;
     padding-bottom: 80px;
     padding-top: 80px;
@@ -21,4 +21,19 @@ section{
 
 .chamada-texto{
     margin-right: 5%;
+}
+h1{
+    font-size: 40px;
+}
+p{
+    font-size: 20px;
+}
+.categoria-videos{
+    display: flex;
+    overflow-x: auto;
+    gap: 10px;
+}
+.categoria{
+    padding-left: 20px;
+    padding-right: 20px;
 }
