--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
-    color: green;
-    background: rgb(229, 240, 24);
+    color: rgb(174, 0, 255);
+    background: rgb(0, 89, 255);
     margin: 0px;
     font-family: "Permanent Marker", sans-serif;
 }
