--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     background: blue ;
     margin: 0px;
     font-family: "Permanent Marker", sans-serif;
+    margin-bottom: 100px;
 }
 header{
     border-bottom: solid 2px red;
@@ -28,9 +29,6 @@ h1{
 p{
     font-size: 20px;
 }
-img{
-    height: 200px;
-}
 .categoria-videos{
     display: flex;
     overflow-x: auto;
@@ -40,4 +38,16 @@ img{
     padding-left: 20px;
     padding-right: 20px;
     gap: 10px;
+}
+
+.categoria-videos img{
+    opacity : 0.5;
+    height: 200px;
+}
+.categoria-videos img:hover{
+    opacity: 1.0;
+    border:1px solid red;
+}
+.categoria-videos h2{
+    color:aqua;
 }
